src/snapshots/parse_idb@madame.i64__database_creation_version.snap
---
hash: E45C5150A7AEFC25
source: src/test.rs
expression: database_creation_version
---
Some("8.3\0")