src/snapshots/parse_idb@madame.i64__entry_points.snap
---
hash: 377C9232A6F7475D
source: src/test.rs
expression: entry_points
---
[
 (
  name: ".init_proc",
  address: 4198400,
  forwarded: None,
  entry_type: Some((
   comment: None,
   is_const: false,
   is_volatile: false,
   type_variant: Function((
    calling_convention: None,
    ret: (
     comment: None,
     is_const: false,
     is_volatile: false,
     type_variant: Pointer((
      closure: Default,
      modifier: None,
      shifted: None,
      typ: (
       comment: None,
       is_const: false,
       is_volatile: false,
       type_variant: Pointer((
        closure: Default,
        modifier: None,
        shifted: None,
        typ: (
         comment: None,
         is_const: false,
         is_volatile: false,
         type_variant: Function((
          calling_convention: Some(Voidarg),
          ret: (
           comment: None,
           is_const: false,
           is_volatile: false,
           type_variant: Basic(IntSized(
            bytes: 8,
            is_signed: None,
           )),
          ),
          args: [],
          retloc: None,
          method: None,
          is_noret: false,
          is_pure: false,
          is_high: false,
          is_static: false,
          is_virtual: false,
          is_const: false,
          is_constructor: false,
          is_destructor: false,
         )),
        ),
       )),
      ),
     )),
    ),
    args: [],
    retloc: None,
    method: None,
    is_noret: false,
    is_pure: false,
    is_high: false,
    is_static: false,
    is_virtual: false,
    is_const: false,
    is_constructor: false,
    is_destructor: false,
   )),
  )),
 ),
 (
  name: "start",
  address: 4198928,
  forwarded: None,
  entry_type: Some((
   comment: None,
   is_const: false,
   is_volatile: false,
   type_variant: Function((
    calling_convention: Some(Fastcall),
    ret: (
     comment: None,
     is_const: false,
     is_volatile: false,
     type_variant: Basic(Void),
    ),
    args: [
     (
      name: None,
      comment: None,
      ty: (
       comment: None,
       is_const: false,
       is_volatile: false,
       type_variant: Basic(IntSized(
        bytes: 8,
        is_signed: None,
       )),
      ),
      loc: None,
      flags: None,
     ),
     (
      name: None,
      comment: None,
      ty: (
       comment: None,
       is_const: false,
       is_volatile: false,
       type_variant: Basic(IntSized(
        bytes: 8,
        is_signed: None,
       )),
      ),
      loc: None,
      flags: None,
     ),
     (
      name: None,
      comment: None,
      ty: (
       comment: None,
       is_const: false,
       is_volatile: false,
       type_variant: Pointer((
        closure: Default,
        modifier: None,
        shifted: None,
        typ: (
         comment: None,
         is_const: false,
         is_volatile: false,
         type_variant: Function((
          calling_convention: Some(Voidarg),
          ret: (
           comment: None,
           is_const: false,
           is_volatile: false,
           type_variant: Basic(Void),
          ),
          args: [],
          retloc: None,
          method: None,
          is_noret: false,
          is_pure: false,
          is_high: false,
          is_static: false,
          is_virtual: false,
          is_const: false,
          is_constructor: false,
          is_destructor: false,
         )),
        ),
       )),
      ),
      loc: None,
      flags: None,
     ),
    ],
    retloc: None,
    method: None,
    is_noret: true,
    is_pure: false,
    is_high: false,
    is_static: false,
    is_virtual: false,
    is_const: false,
    is_constructor: false,
    is_destructor: false,
   )),
  )),
 ),
 (
  name: ".term_proc",
  address: 4204328,
  forwarded: None,
  entry_type: Some((
   comment: None,
   is_const: false,
   is_volatile: false,
   type_variant: Function((
    calling_convention: None,
    ret: (
     comment: None,
     is_const: false,
     is_volatile: false,
     type_variant: Basic(Void),
    ),
    args: [],
    retloc: None,
    method: None,
    is_noret: false,
    is_pure: false,
    is_high: false,
    is_static: false,
    is_virtual: false,
    is_const: false,
    is_constructor: false,
    is_destructor: false,
   )),
  )),
 ),
 (
  name: "stdin",
  address: 4227168,
  forwarded: None,
  entry_type: Some((
   comment: None,
   is_const: false,
   is_volatile: false,
   type_variant: Pointer((
    closure: Default,
    modifier: None,
    shifted: None,
    typ: (
     comment: None,
     is_const: false,
     is_volatile: false,
     type_variant: Typeref((
      ref_type: None,
      typeref_value: Name(Some("FILE")),
     )),
    ),
   )),
  )),
 ),
]