src/snapshots/parse_idb@madame.i64__funcords.snap
---
hash: FA329AB0DE74834D
source: src/test.rs
expression: funcords
---
[
 (4198400),
 (4198432),
 (4198448),
 (4198464),
 (4198480),
 (4198496),
 (4198512),
 (4198528),
 (4198544),
 (4198560),
 (4198576),
 (4198592),
 (4198608),
 (4198624),
 (4198640),
 (4198656),
 (4198672),
 (4198688),
 (4198704),
 (4198720),
 (4198736),
 (4198752),
 (4198768),
 (4198784),
 (4198800),
 (4198816),
 (4198832),
 (4198848),
 (4198864),
 (4198928),
 (4198992),
 (4199104),
 (4199152),
 (4199168),
 (4200176),
 (4200384),
 (4200560),
 (4201040),
 (4201680),
 (4202320),
 (4202976),
 (4203344),
 (4203376),
 (4203600),
 (4203872),
 (4204208),
 (4204320),
 (4204328),
 (4228240),
 (4228248),
 (4228256),
 (4228264),
 (4228272),
 (4228280),
 (4228288),
 (4228296),
 (4228304),
 (4228312),
 (4228320),
 (4228328),
 (4228336),
 (4228344),
 (4228352),
]