src/snapshots/parse_idb@madame.i64__input_file.snap
---
hash: 3E438599E49A35E5
source: src/test.rs
expression: input_file
---
"/mnt/c/Users/eliasb/OneDrive/SAMPLES/madam2_ctf/madame\0"