src/snapshots/parse_idb@madame.i64__input_file_md5.snap
---
hash: F14B1E7F895DCFEE
source: src/test.rs
expression: input_file_md5
---
Some((244, 204, 127, 78, 136, 73, 252, 131, 211, 77, 190, 27, 45, 154, 68, 225))