src/snapshots/parse_idb@madame.i64__input_file_sha256.snap
---
hash: 1D261CB176DEC4A6
source: src/test.rs
expression: input_file_sha256
---
Some((85, 126, 53, 180, 247, 106, 88, 22, 222, 212, 9, 97, 230, 180, 63, 129, 169, 188, 195, 218, 154, 100, 2, 21, 118, 129, 147, 75, 133, 43, 65, 47))