src/snapshots/parse_idb@madame.i64__nam.snap
---
hash: 30916181886212BD
source: src/test.rs
expression: nam
---
Some((
 names: [
  (4195096),
  (4195140),
  (4195172),
  (4195208),
  (4195232),
  (4195236),
  (4195240),
  (4195244),
  (4195248),
  (4195256),
  (4195264),
  (4195681),
  (4195698),
  (4195713),
  (4195726),
  (4195745),
  (4195753),
  (4195773),
  (4195785),
  (4195795),
  (4195805),
  (4195810),
  (4195815),
  (4195823),
  (4195831),
  (4195836),
  (4195842),
  (4195849),
  (4195856),
  (4195874),
  (4195888),
  (4198400),
  (4198656),
  (4198672),
  (4198688),
  (4198704),
  (4198720),
  (4198736),
  (4198752),
  (4198768),
  (4198784),
  (4198800),
  (4198816),
  (4198832),
  (4198848),
  (4198864),
  (4198928),
  (4199168),
  (4200176),
  (4200384),
  (4200560),
  (4201040),
  (4201680),
  (4202320),
  (4202976),
  (4203344),
  (4203376),
  (4203600),
  (4203872),
  (4204208),
  (4204320),
  (4204328),
  (4206608),
  (4206902),
  (4206928),
  (4207123),
  (4207144),
  (4207264),
  (4207392),
  (4207502),
  (4207504),
  (4207592),
  (4207648),
  (4207680),
  (4214768),
  (4214776),
  (4214944),
  (4216480),
  (4218016),
  (4218528),
  (4220064),
  (4220320),
  (4220832),
  (4222368),
  (4222624),
  (4223136),
  (4224672),
  (4224928),
  (4225440),
  (4225632),
  (4227168),
  (4227200),
  (4227456),
  (4227712),
  (4227968),
  (4228224),
  (4228228),
  (4228232),
  (4228240),
  (4228248),
  (4228256),
  (4228264),
  (4228272),
  (4228280),
  (4228288),
  (4228296),
  (4228304),
  (4228312),
  (4228320),
  (4228328),
  (4228336),
  (4228344),
 ],
))