src/snapshots/parse_idb@madame.i64__segments.snap
---
hash: 39BD678802C39409
source: src/test.rs
expression: segments
---
[
 (
  address: (
   start: (4194304),
   end: (4196384),
  ),
  name: (1),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: Rel4K,
  comb: Pub,
  perm: Some((4)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 1,
  defsr: (Some(0), Some(0), Some(0), Some(20), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0)),
  color: 0,
 ),
 (
  address: (
   start: (4198400),
   end: (4198427),
  ),
  name: (4),
  class_id: (3),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((5)),
  bitness: S64Bits,
  seg_type: Code,
  selector: 8,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4198427),
   end: (4198432),
  ),
  name: (1),
  class_id: (3),
  orgbase: 0,
  flags: (16),
  align: Rel4K,
  comb: Pub,
  perm: Some((5)),
  bitness: S64Bits,
  seg_type: Code,
  selector: 2,
  defsr: (Some(0), Some(0), Some(0), Some(20), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0)),
  color: 0,
 ),
 (
  address: (
   start: (4198432),
   end: (4198656),
  ),
  name: (5),
  class_id: (3),
  orgbase: 0,
  flags: (16),
  align: RelPara,
  comb: Pub,
  perm: Some((5)),
  bitness: S64Bits,
  seg_type: Code,
  selector: 9,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4198656),
   end: (4198864),
  ),
  name: (6),
  class_id: (3),
  orgbase: 0,
  flags: (16),
  align: RelPara,
  comb: Pub,
  perm: Some((5)),
  bitness: S64Bits,
  seg_type: Code,
  selector: 10,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4198864),
   end: (4204325),
  ),
  name: (7),
  class_id: (3),
  orgbase: 0,
  flags: (16),
  align: RelPara,
  comb: Pub,
  perm: Some((5)),
  bitness: S64Bits,
  seg_type: Code,
  selector: 11,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4204325),
   end: (4204328),
  ),
  name: (1),
  class_id: (3),
  orgbase: 0,
  flags: (16),
  align: Rel4K,
  comb: Pub,
  perm: Some((5)),
  bitness: S64Bits,
  seg_type: Code,
  selector: 2,
  defsr: (Some(0), Some(0), Some(0), Some(20), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0)),
  color: 0,
 ),
 (
  address: (
   start: (4204328),
   end: (4204341),
  ),
  name: (8),
  class_id: (3),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((5)),
  bitness: S64Bits,
  seg_type: Code,
  selector: 12,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4206592),
   end: (4207696),
  ),
  name: (9),
  class_id: (10),
  orgbase: 0,
  flags: (16),
  align: RelPara,
  comb: Pub,
  perm: Some((4)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 13,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4207696),
   end: (4207892),
  ),
  name: (11),
  class_id: (10),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((4)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 14,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4207892),
   end: (4207896),
  ),
  name: (1),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: Rel4K,
  comb: Pub,
  perm: Some((4)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 3,
  defsr: (Some(0), Some(0), Some(0), Some(20), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0)),
  color: 0,
 ),
 (
  address: (
   start: (4207896),
   end: (4208984),
  ),
  name: (12),
  class_id: (10),
  orgbase: 0,
  flags: (16),
  align: RelQword,
  comb: Pub,
  perm: Some((4)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 15,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4214272),
   end: (4214280),
  ),
  name: (13),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelQword,
  comb: Pub,
  perm: Some((6)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 16,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4214280),
   end: (4214288),
  ),
  name: (14),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelQword,
  comb: Pub,
  perm: Some((6)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 17,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4214288),
   end: (4214768),
  ),
  name: (1),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: Rel4K,
  comb: Pub,
  perm: Some((6)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 4,
  defsr: (Some(0), Some(0), Some(0), Some(20), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0), Some(0)),
  color: 0,
 ),
 (
  address: (
   start: (4214768),
   end: (4214784),
  ),
  name: (15),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelQword,
  comb: Pub,
  perm: Some((6)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 18,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4214784),
   end: (4214912),
  ),
  name: (16),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelQword,
  comb: Pub,
  perm: Some((6)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 19,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4214912),
   end: (4227168),
  ),
  name: (17),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: Rel32Bytes,
  comb: Pub,
  perm: Some((6)),
  bitness: S64Bits,
  seg_type: Data,
  selector: 20,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4227168),
   end: (4228240),
  ),
  name: (18),
  class_id: (19),
  orgbase: 0,
  flags: (16),
  align: Rel32Bytes,
  comb: Pub,
  perm: Some((6)),
  bitness: S64Bits,
  seg_type: Bss,
  selector: 21,
  defsr: (None, None, None, Some(20), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (4228240),
   end: (4228360),
  ),
  name: (20),
  class_id: (0),
  orgbase: 0,
  flags: (16),
  align: RelQword,
  comb: Pub,
  perm: None,
  bitness: S64Bits,
  seg_type: Xtrn,
  selector: 22,
  defsr: (None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
]