src/snapshots/parse_idb@madame.i64__srareas.snap
---
hash: C2FA6AE24568DAB3
source: src/test.rs
expression: srareas
---
[
 ("cs", [
  (
   range: (
    start: (4194304),
    end: (4196384),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198400),
    end: (4198427),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198427),
    end: (4198432),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198432),
    end: (4198656),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198656),
    end: (4198864),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198864),
    end: (4204325),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204325),
    end: (4204328),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204328),
    end: (4204341),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4206592),
    end: (4207696),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207696),
    end: (4207892),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207892),
    end: (4207896),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207896),
    end: (4208984),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214272),
    end: (4214280),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214280),
    end: (4214288),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214288),
    end: (4214768),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214768),
    end: (4214784),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214784),
    end: (4214912),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214912),
    end: (4227168),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4227168),
    end: (4228240),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4228240),
    end: (4228360),
   ),
   value: None,
   tag: Some(Auto),
  ),
 ]),
 ("ds", [
  (
   range: (
    start: (4194304),
    end: (4196384),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198400),
    end: (4198427),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198427),
    end: (4198432),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198432),
    end: (4198656),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198656),
    end: (4198864),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198864),
    end: (4204325),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204325),
    end: (4204328),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204328),
    end: (4204341),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4206592),
    end: (4207696),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207696),
    end: (4207892),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207892),
    end: (4207896),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207896),
    end: (4208984),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214272),
    end: (4214280),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214280),
    end: (4214288),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214288),
    end: (4214768),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214768),
    end: (4214784),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214784),
    end: (4214912),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214912),
    end: (4227168),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4227168),
    end: (4228240),
   ),
   value: Some(20),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4228240),
    end: (4228360),
   ),
   value: None,
   tag: Some(Auto),
  ),
 ]),
 ("es", [
  (
   range: (
    start: (4194304),
    end: (4196384),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198400),
    end: (4198427),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198427),
    end: (4198432),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198432),
    end: (4198656),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198656),
    end: (4198864),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198864),
    end: (4204325),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204325),
    end: (4204328),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204328),
    end: (4204341),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4206592),
    end: (4207696),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207696),
    end: (4207892),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207892),
    end: (4207896),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207896),
    end: (4208984),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214272),
    end: (4214280),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214280),
    end: (4214288),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214288),
    end: (4214768),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214768),
    end: (4214784),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214784),
    end: (4214912),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214912),
    end: (4227168),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4227168),
    end: (4228240),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4228240),
    end: (4228360),
   ),
   value: None,
   tag: Some(Auto),
  ),
 ]),
 ("fs", [
  (
   range: (
    start: (4194304),
    end: (4196384),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198400),
    end: (4198427),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198427),
    end: (4198432),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198432),
    end: (4198656),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198656),
    end: (4198864),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198864),
    end: (4204325),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204325),
    end: (4204328),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204328),
    end: (4204341),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4206592),
    end: (4207696),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207696),
    end: (4207892),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207892),
    end: (4207896),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207896),
    end: (4208984),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214272),
    end: (4214280),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214280),
    end: (4214288),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214288),
    end: (4214768),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214768),
    end: (4214784),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214784),
    end: (4214912),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214912),
    end: (4227168),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4227168),
    end: (4228240),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4228240),
    end: (4228360),
   ),
   value: None,
   tag: Some(Auto),
  ),
 ]),
 ("gs", [
  (
   range: (
    start: (4194304),
    end: (4196384),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198400),
    end: (4198427),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198427),
    end: (4198432),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198432),
    end: (4198656),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198656),
    end: (4198864),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198864),
    end: (4204325),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204325),
    end: (4204328),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204328),
    end: (4204341),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4206592),
    end: (4207696),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207696),
    end: (4207892),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207892),
    end: (4207896),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207896),
    end: (4208984),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214272),
    end: (4214280),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214280),
    end: (4214288),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214288),
    end: (4214768),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214768),
    end: (4214784),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214784),
    end: (4214912),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214912),
    end: (4227168),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4227168),
    end: (4228240),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4228240),
    end: (4228360),
   ),
   value: None,
   tag: Some(Auto),
  ),
 ]),
 ("ss", [
  (
   range: (
    start: (4194304),
    end: (4196384),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198400),
    end: (4198427),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198427),
    end: (4198432),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198432),
    end: (4198656),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198656),
    end: (4198864),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4198864),
    end: (4204325),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204325),
    end: (4204328),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4204328),
    end: (4204341),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4206592),
    end: (4207696),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207696),
    end: (4207892),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207892),
    end: (4207896),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4207896),
    end: (4208984),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214272),
    end: (4214280),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214280),
    end: (4214288),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214288),
    end: (4214768),
   ),
   value: Some(0),
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214768),
    end: (4214784),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214784),
    end: (4214912),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4214912),
    end: (4227168),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4227168),
    end: (4228240),
   ),
   value: None,
   tag: Some(Auto),
  ),
  (
   range: (
    start: (4228240),
    end: (4228360),
   ),
   value: None,
   tag: Some(Auto),
  ),
 ]),
]